[metadata]
name = fsva
version = attr: fsva.main.VERSION
description = fsva (FuseSoc Verification Automation)
long_description = file: README.md, LICENSE
license = MIT
keywords =
    verification
    simulation
    testbench
    FuseSoc
    VHDL
    SystemVerilog
    UVVM
    OSVVM
    GHDL
    Questa
    HDL
    RTL
    FPGA
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
author = Michał Kruszewski
author_email = mkru@protonmail.com
url = https://github.com/m-kru/fsva

[options]
packages = find:
install_requires =
    fusesoc>=1.9.1

[options.entry_points]
console_scripts =
    fsva = fsva.main:main
